# CCI

./: .env.example  .gitignore  README.md  docker-compose.yml  run.bat
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: router.py
backend/app/schemas/: core.py
backend/app/services/: cell_decoder.py  classifier.py  demo_store.py  evidence_store.py  export_service.py  ingestion.py  ip_decoder.py  tac_decoder.py
backend/scripts/: generate_synthetic_ipdr.py  generate_test_ipdr.py
backend/tests/: test_api_flow.py  test_classifier.py  test_evidence_store.py  test_extraction.py
backend/tests/fixtures/: dot_nat_syslog.csv  fixed_line_dsl_ipdr.csv  malformed_ipdr.csv  operator_variant_ipdr.tsv  translated_only_not_bparty.csv  valid_ipdr.csv
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: DashboardCharts.jsx  GeoMap.jsx  ImeiPage.jsx  IpPage.jsx  MacPage.jsx  PoIPage.jsx  TimelineChart.jsx  common.jsx
frontend/src/data/: demo.js
scripts/: backend-dev.cmd  frontend-dev.cmd  start-dev.ps1
