[project]
name = "pramaan-backend"
version = "0.2.0"
description = "Pramaan IPDR Engine Backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic-settings==2.7.1",
  "python-multipart==0.0.20",
  "polars>=1.0.0",
  "fastexcel>=0.12.0",
  "SQLAlchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "pyasn>=1.6.2",
  "geoip2>=4.8.0",
  "chardet>=5.2.0",
  "httpx==0.28.1",
  "openpyxl>=3.1.0",
  "reportlab>=4.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider --basetemp=.pytest_tmp"